--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ main {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1.5fr 0.5fr;
 }
 
@@ -58,19 +58,20 @@ main {
 }
 
 #letter1 {
-    grid-column-start: 1;
-    grid-row-start: 2;
-}
-
-#letter2 {
     grid-column-start: 2;
     grid-row-start: 2;
 }
 
+#letter2 {
+    grid-column-start: 3;
+    grid-row-start: 2;
+}
+
 .letter img {
-    flex-shrink: 0;
+    /* flex-shrink: 0; */
     /* min-width: 100%; */
     min-height: 100%;
+    max-height: 100%;
 }
 
 .button {
@@ -112,52 +113,9 @@ main {
 }
 
 #left {
-    grid-column-start: 1;
-}
-
-#right {
     grid-column-start: 2;
 }
 
-#next {
-    width: 60px;
-    height: 60px;
-    grid-column-start: 1;
-    grid-row-start: 3;
-    margin-right: 0;
-    margin-left: auto;
-    transition: all .3s;
-    opacity: 1;
-    padding: 16px;
-    border-radius: 100%;
-    border-color: transparent; 
-    background: #bdbdbd;
-    stroke: #1a1a1a;
-}
-
-#next:hover:not(:disabled),
-#next:focus {
-    transition: all .3s;
-    cursor: pointer;
-    box-shadow: 0px 0px 15px #bdbdbd;
-}
-
-#next:active {
-    cursor: pointer;
-    background: #1a1a1a; 
-    stroke: #bdbdbd;
-    box-shadow: none;
-}
-
-#next span {
-    width: 24px;
-    height: 24px;
-    display: inline-block;
-    font-size: 1.5em;
-    font-family: 'Merriweather', serif;
-}
-
-#next:disabled {
-    transition: opacity .5s;
-    opacity: 0;
+#right {
+    grid-column-start: 3;
 }
